[gd_scene load_steps=41 format=3 uid="uid://box1ag07ubbmk"]

[ext_resource type="Script" path="res://Escenas/angry.gd" id="1_0qdgr"]
[ext_resource type="Texture2D" uid="uid://xo8yw42twp70" path="res://Images/fisg√≥n_die-Sheet.png" id="2_p4q60"]
[ext_resource type="Texture2D" uid="uid://b8r0h56ux17tw" path="res://Images/Angry_walk-Sheet.png" id="3_7v66l"]
[ext_resource type="Texture2D" uid="uid://dprdkr37alsij" path="res://Images/Angry_stun-Sheet.png" id="4_dho13"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nqhdt"]
atlas = ExtResource("2_p4q60")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_er7i1"]
atlas = ExtResource("2_p4q60")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmcqj"]
atlas = ExtResource("2_p4q60")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dgd6"]
atlas = ExtResource("2_p4q60")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w43di"]
atlas = ExtResource("2_p4q60")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_04uk3"]
atlas = ExtResource("2_p4q60")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vga2"]
atlas = ExtResource("2_p4q60")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojwsh"]
atlas = ExtResource("2_p4q60")
region = Rect2(288, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej3ao"]
atlas = ExtResource("2_p4q60")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjkjk"]
atlas = ExtResource("2_p4q60")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab1yw"]
atlas = ExtResource("2_p4q60")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t763q"]
atlas = ExtResource("2_p4q60")
region = Rect2(288, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kch7l"]
atlas = ExtResource("3_7v66l")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tjcp"]
atlas = ExtResource("3_7v66l")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cgct"]
atlas = ExtResource("3_7v66l")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdp5b"]
atlas = ExtResource("3_7v66l")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvy0k"]
atlas = ExtResource("3_7v66l")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_awqew"]
atlas = ExtResource("3_7v66l")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux7q7"]
atlas = ExtResource("3_7v66l")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_75k5i"]
atlas = ExtResource("3_7v66l")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec44i"]
atlas = ExtResource("4_dho13")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4xoj"]
atlas = ExtResource("4_dho13")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgu2x"]
atlas = ExtResource("4_dho13")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_37ln5"]
atlas = ExtResource("4_dho13")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3mxe"]
atlas = ExtResource("4_dho13")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kla2"]
atlas = ExtResource("4_dho13")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ua2s"]
atlas = ExtResource("3_7v66l")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndb4q"]
atlas = ExtResource("3_7v66l")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g280"]
atlas = ExtResource("3_7v66l")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_22okn"]
atlas = ExtResource("3_7v66l")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6j2g"]
atlas = ExtResource("3_7v66l")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fv5x"]
atlas = ExtResource("3_7v66l")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_q547n"]
atlas = ExtResource("3_7v66l")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7diis"]
atlas = ExtResource("3_7v66l")
region = Rect2(96, 192, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_ffkrw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqhdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er7i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmcqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dgd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w43di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04uk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vga2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojwsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej3ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjkjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab1yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t763q")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kch7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tjcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cgct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdp5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvy0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awqew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux7q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75k5i")
}],
"loop": true,
"name": &"run",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec44i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4xoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgu2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37ln5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3mxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kla2")
}],
"loop": false,
"name": &"stun",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ua2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndb4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g280")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22okn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6j2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fv5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q547n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7diis")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvehp"]
size = Vector2(14, 35)

[node name="Angry" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_0qdgr")

[node name="angry_animated" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -8)
sprite_frames = SubResource("SpriteFrames_ffkrw")
animation = &"stun"

[node name="angry_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_gvehp")

[node name="view" type="Node2D" parent="."]

[node name="view1" type="RayCast2D" parent="view"]
position = Vector2(7, -9)
target_position = Vector2(155, 12)
collision_mask = 4

[node name="view2" type="RayCast2D" parent="view"]
position = Vector2(7, -10)
target_position = Vector2(154, -13)
collision_mask = 4

[node name="view3" type="RayCast2D" parent="view"]
position = Vector2(9, -9)
target_position = Vector2(6, 0)
collision_mask = 10

[node name="view4" type="RayCast2D" parent="view"]
position = Vector2(-8, -9)
target_position = Vector2(-69, 0)
collision_mask = 8

[node name="view_back" type="RayCast2D" parent="view"]
position = Vector2(-2, -9)
target_position = Vector2(-92, 0)
collision_mask = 4
